agregando algunos cambios al slide

--- a/root/index.html
+++ b/root/index.html
@@ -55,10 +55,12 @@
 
     <main>
         <section class="slide">
+            <div class="div_slide">
 
-            <p class="placer">¡Es un placer tenerte aquí!</p>
-            <p class="comederodescuento">¡Comederos en descuento!</p>
-            <a href="#" target="_blank"><button class="comederoboton">Comederos</button></a>
+            <p id="placer">¡Es un placer tenerte aquí!</p>
+            <p id="comederodescuento">¡Comederos en descuento!</p>
+            <a href="#" target="_blank"><button id="comederoboton">Comederos</button></a>
+        </div>
 
         </section>
 
