--- a/root/index.html
+++ b/root/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Petshop los mejores productos con los mejores precios">
     <link rel="stylesheet" type="text/css" href="styles/styles.css">
-    <title>Practica integradora</title>
+    <title>Fron PetShop</title>
+    <link rel="shortcut icon" href="/img/Cat.png">
 
 </head>
 
