reparando color del placeholder formulito

--- a/root/index.html
+++ b/root/index.html
@@ -106,8 +106,8 @@
                 <h3 class="susbsparamas">Suscríbete para más novedades</h3>
 
                 <form id="formupeque" action="#">
-                    <span> <input id="formulito" type="email" placeholder="Ingresá tu correo electronico"> </span>
-                    <span><button id="botonsub">Suscribirme</button></span>
+                    <input class="formulito" type="email" placeholder="Ingresá tu correo electronico">
+                    <button id="botonsub">Suscribirme</button>
                 </form>
             </div>
         </div>
