ultimando detalles, ya no quiero tocar mas

--- a/root/index.html
+++ b/root/index.html
@@ -39,13 +39,13 @@
 
     <header>
 
-        <img src="./img/logo.png" class="logoheader" alt="Logo Front End">
+       <a href="index.html"><img src="./img/logo.png" class="logoheader" alt="Logo Front End"></a>
         <nav>
             <ul class="nav_links">
-                <li><a href="#"><img src="./img/pawprint 1.png" alt="patita de perro" height="20px"> Categorías</a></li>
-                <li><a href="#"><img src="./img/pawprint 1.png" alt="patita de perro" height="20px"> Pets</a></li>
-                <li><a href="#"><img src="./img/pawprint 1.png" alt="patita de perro" height="20px"> Nosotros</a></li>
-                <li><a href="#"><img src="./img/pawprint 1.png" alt="patita de perro" height="20px"> Contactanos</a></li>
+                <li><a href="Categorías.html"><img src="./img/pawprint 1.png" alt="patita de perro" height="20px"> Categorías</a></li>
+                <li><a href="Pets.html"><img src="./img/pawprint 1.png" alt="patita de perro" height="20px"> Pets</a></li>
+                <li><a href="Nosotros.html"><img src="./img/pawprint 1.png" alt="patita de perro" height="20px"> Nosotros</a></li>
+                <li><a href="Contactanos.html"><img src="./img/pawprint 1.png" alt="patita de perro" height="20px"> Contactanos</a></li>
             </ul>
         </nav>
         </div>
@@ -82,9 +82,9 @@
 
         <div class="cards">
 
-            <img id="imagenes" src="./img/Churrasquito.png" alt="churrasco juguete">
-            <img id="imagenes" src="./img/Comedero.png" alt="comederos perros">
-            <img id="imagenes" src="./img/Huesito juguete.png" alt="huestiso juguetes">
+            <a  href="#"><img id="imagenes" src="./img/Churrasquito.png" alt="churrasco juguete"></a>
+            <a  href="#"><img id="imagenes" src="./img/Comedero.png" alt="comederos perros"></a>
+            <a  href="#"><img id="imagenes" src="./img/Huesito juguete.png" alt="huestiso juguetes"></a>
 
         </div>
         <h3 id="contactanos">Contactenos</h3>
@@ -118,7 +118,7 @@
             </div>
             <div class="itemsdeinfo">
                 <img src="./img/Phone.png" alt="telefono">
-                <img id="logo2" src="./img/Logo2.png" alt="logo">
+               <a href="./index.html" ><img id="logo2" src="./img/Logo2.png" alt="logo"></a>
                 
                 
             </div>
